# FP1

./: .README.md.swp  LICENSE  Lesson1.hs  Lesson2.hs  Lesson3.hs  Parser.hs  README.md  notakto.cabal
app/: Main.hs
src/: Client.hs  Entities.hs  Lesson4.hs  Lesson5.hs  Lesson6.hs  Matrixer.hs  Parser.hs  Solver.hs
test/integration/: NotImplSpec.hs
test/unit/: ClientSpec.hs  MatrixerSpec.hs  ParserSpec.hs  SolverSpec.hs
