name:                notakto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/notakto#readme
license:             BSD3
license-file:        LICENSE
author:              Kazimieras Senvaitis
maintainer:          example@example.com
copyright:           2017 Kazimieras Senvaitis
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                     , Solver
                     , Matrixer
                     , Entities
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable notakto-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , notakto
  default-language:    Haskell2010

test-suite unit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/unit
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , notakto
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite integration-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/integration
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , notakto
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/notakto
